--- a/client/src/components/aside/aside.module.css
+++ b/client/src/components/aside/aside.module.css
@@ -1,6 +1,6 @@
 .aside{
     border:1px solid var(--primary-color--dark);
+    border-radius: 5px;
     box-sizing: border-box;
-    padding: 20px;
-    max-width: 400px;
+    padding:40px 30px;
 }
