Added cart orders list. Added fixed height with internal scroll in aside section and main section.(30min)

--- a/client/src/components/aside/aside.module.css
+++ b/client/src/components/aside/aside.module.css
@@ -3,4 +3,6 @@
     border-radius: 5px;
     box-sizing: border-box;
     padding:40px 30px;
+    max-height:calc(100vh - 200px);
+    overflow-y: scroll;
 }
