--- a/client/src/pages/singleShop/singleShop.module.css
+++ b/client/src/pages/singleShop/singleShop.module.css
@@ -6,4 +6,6 @@
     width: 100%;
     border: 1px solid var(--primary-color--dark);
     border-radius: 5px;
+    max-height: calc(100vh - 200px);
+    overflow-y: scroll;
 }
