--- a/client/src/components/UI/MyButton/MyButton.module.css
+++ b/client/src/components/UI/MyButton/MyButton.module.css
@@ -15,3 +15,12 @@
     color: var(--primary-color--light);
     transition: all .3s;
 }
+.button[disabled]{
+    background-color: grey;
+}
+.button[disabled]:hover{
+    border-color:transparent;
+    background-color: grey;
+    color: var(--primary-color--dark);
+    cursor: not-allowed;
+}
