--- a/client/src/components/cartProduct/cartProduct.module.css
+++ b/client/src/components/cartProduct/cartProduct.module.css
@@ -6,6 +6,7 @@
     line-height: 20px;
     color: var(--primary-color--dark);
     display: flex;
+    flex-direction: column;
     gap: 20px;
 }
 .content{
@@ -18,7 +19,6 @@ display: flex;
 .image{
     flex: 1 1 100%;
     height: 300px;
-    width: 500px;
     background-color: grey;
     border-radius: 5px;
 }
@@ -31,4 +31,35 @@ display: flex;
 .input{
     padding: 10px 20px;
     border-radius: 5px;
+    text-align: center;
+    outline: 1px solid var(--primary-color--dark);
+}
+.amount_button{
+    width: 40px;
+    height: 40px;
+    color: var(--primary-color--light);
+    border: none;
+    border-radius: 5px;
+    opacity: .6;
+    transition: .3s;
+    cursor: pointer;
+}
+.amount_button:disabled{
+    background-color: #6e6e6e;
+    opacity: 1;
+    cursor: not-allowed;
+}
+.amount_button:hover{
+    opacity: 1;
+    transition: .3s;
+}
+.amount_button_dec{
+    background-color:darkred ;
+}
+.amount_button_inc{
+    background-color: #145e45;
+}
+.amount_wrapper{
+    display: flex;
+    gap: 10px;
 }
