--- a/client/src/components/shopItem/shopItem.module.css
+++ b/client/src/components/shopItem/shopItem.module.css
@@ -7,14 +7,16 @@
     border: 1px solid var(--primary-color--dark);
     border-radius: 5px;
     padding: 30px;
+    font-size: 24px;
+    line-height: 26px;
 }
 .name{
-    font-size: 18px;
-    line-height: 20px;
     color: var(--primary-color--dark);
     margin-top: 50px;
 }
 .image{
     width: 100%;
-    height: 400px;
+}
+.price{
+    margin-top: 20px;
 }
