--- a/client/src/pages/cart/cart.module.css
+++ b/client/src/pages/cart/cart.module.css
@@ -3,9 +3,10 @@
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
+    position: relative;
 }
 .aside{
-    width: 50%;
+    width:calc(50% - 15px);
     max-width: 500px;
 }
 .aside__list{
@@ -22,7 +23,7 @@
     width: 100%;
 }
 .orders{
-    width: 50%;
+    width: calc(50% - 15px);
     border: 1px solid var(--primary-color--dark);
     border-radius: 5px;
     padding: 20px;
@@ -38,4 +39,55 @@
     font-size: 24px;
     line-height: 26px;
     color: var(--primary-color--dark);
+}
+.button{
+    padding: 15px 20px;
+    border: 1px solid var(--secondary-color--light);
+    border-radius: 5px;
+    background-color: var(--secondary-color--light);
+    color: var(--primary-color--dark);
+    cursor: pointer;
+    font-size: 16px;
+    align-self: flex-end;
+    transition: all .3s;
+}
+.button:hover{
+    border-color: var(--secondary-color--dark);
+    background-color: var(--secondary-color--dark);
+    color: var(--primary-color--light);
+    transition: all .3s;
+}
+.disabled{
+    background-color: grey;
+}
+.disabled:hover{
+    border-color:transparent;
+    background-color: grey;
+    color: var(--primary-color--dark);
+    cursor: not-allowed;
+}
+.display_none{
+    display: none;
+}
+.notification{
+    position: fixed;
+    left: 50%;
+    transform: translate(-50%, 0);
+    background-color: var(--secondary-color--dark);
+    width: 500px;
+    height: 50px;
+    opacity: 0;
+    top: -100%;
+    transition: .5s;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--primary-color--light);
+}
+
+.notification_active{
+    top: 20px;
+    opacity: 1;
+    transition: .5s;
 }
