--- a/client/src/pages/shop/shop.module.css
+++ b/client/src/pages/shop/shop.module.css
@@ -6,3 +6,13 @@
 .aside{
     width: 400px;
 }
+.default{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    font-size: 24px;
+    line-height: 26px;
+    font-weight: bold;
+    color: var(--primary-color--dark);
+}
