--- a/client/src/components/cartProduct/cartProduct.module.css
+++ b/client/src/components/cartProduct/cartProduct.module.css
@@ -2,6 +2,7 @@
     border: 1px solid var(--primary-color--dark);
     border-radius: 5px;
     padding: 20px;
+    width: 100%;
     font-size: 18px;
     line-height: 20px;
     color: var(--primary-color--dark);
@@ -62,4 +63,19 @@ display: flex;
 .amount_wrapper{
     display: flex;
     gap: 10px;
+}
+@media (max-width: 992px) {
+    .input{
+        max-width: 70px;
+    }
+    .product{
+        height: 100%;
+        width: auto;
+    }
+}
+@media (max-width: 768px) {
+    .product{
+        width: 100%;
+    }
+
 }
