--- a/client/src/components/shopItem/shopItem.module.css
+++ b/client/src/components/shopItem/shopItem.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items:flex-start;
     justify-content: center;
-    width: calc(50% - 20px);
+    width: calc(50% - 10px);
     border: 1px solid var(--primary-color--dark);
     border-radius: 5px;
     padding: 30px;
@@ -19,4 +19,24 @@
 }
 .price{
     margin-top: 20px;
+}
+@media (max-width: 768px) {
+    .product{
+        width: 100%;
+        height: 100%;
+        align-items: center;
+        overflow: hidden;
+    }
+    .image{
+        height: 50%;
+        width: auto;
+    }
+    .name{
+        margin: 0;
+        padding-top: 20px;
+    }
+    .price{
+        margin: 0;
+        padding: 10px 0;
+    }
 }
