--- a/client/src/pages/cart/cart.module.css
+++ b/client/src/pages/cart/cart.module.css
@@ -1,9 +1,19 @@
 .cart{
-    width: 100vw;
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
     position: relative;
+}
+.empty{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    font-size: 24px;
+    line-height: 26px;
+    font-weight: bold;
+    color: var(--primary-color--dark);
 }
 .aside{
     width:calc(50% - 15px);
@@ -90,4 +100,28 @@
     top: 20px;
     opacity: 1;
     transition: .5s;
+}
+@media (max-width: 992px) {
+    .cart{
+        flex-direction: column;
+    }
+    .aside{
+        order: 2;
+        width: 100vw;
+        max-width: 100%;
+        height: calc(50vh - 100px);
+        overflow-y: scroll;
+    }
+    .orders{
+        order: 1;
+        width: 100%;
+        height: calc(50vh - 100px);
+        align-items: center;
+        gap: 20px;
+        justify-content: center;
+        flex-direction: row;
+    }
+    .footer{
+        height: 100px;
+    }
 }
