--- a/client/src/components/aside/aside.module.css
+++ b/client/src/components/aside/aside.module.css
@@ -1,7 +1,4 @@
 .aside{
-    border:1px solid var(--primary-color--dark);
-    border-radius: 10px;
-    box-sizing: border-box;
     padding:40px 30px;
     max-height:calc(100vh - 200px);
     width: 100%;
@@ -9,14 +6,11 @@
     overflow-x: hidden;
 }
 @media (max-width: 992px) {
-    .shop .aside{
+    .aside{
         padding: 0;
         width: 100%;
         overflow-y: hidden;
         overflow-x: scroll;
-    }
-    .cart .aside{
-        height: calc(50vh - 150px);
     }
 
 }
