--- a/client/src/pages/history/history.module.css
+++ b/client/src/pages/history/history.module.css
@@ -16,3 +16,10 @@
     width: 100%;
     height: 50vh;
 }
+.not_found{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 26px;
+    font-weight: bold;
+}
